--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </button>
         <div class="hashtagInput mb-3">
             <label for="genHashtags" class="form-label">General Hashtags</label>
-            <input id="genHashtags" type="text" v-model="messageGeneral" v-on:change="splice($event, 1)" placeholder="General-use hashtags" class="form-control">
+            <input id="genHashtags" type="text" v-model="messageGeneral" v-on:keyup="splice($event, 1)" placeholder="General-use hashtags" class="form-control">
             <div class='hashtagDisplay'>
                 <a v-for="wordIndex in splitGeneral.length" class="hashtags" :style="{ 'background-color' : colorsGeneral[(wordIndex-1)%3]}" :href="'https://www.instagram.com/explore/tags/' + splitGeneral[wordIndex-1]">
                     #{{ splitGeneral[wordIndex-1] }}
@@ -36,7 +36,7 @@
         </div>
         <div class="hashtagInput mb-3">
             <label for="specHashtags" class="form-label">Specific Hashtags</label>
-            <input id="specHashtags" type="text" v-model="messageSpecific" v-on:change="splice($event, 2)" placeholder="Post-specific hashtags" class="form-control">
+            <input id="specHashtags" type="text" v-model="messageSpecific" v-on:keyup="splice($event, 2)" placeholder="Post-specific hashtags" class="form-control">
             <div class='hashtagDisplay'>
                 <a v-for="wordIndex in splitSpecific.length" class="hashtags" :style="{ 'background-color' : colorsSpecific[(wordIndex-1)%3]}" :href="'https://www.instagram.com/explore/tags/' + splitSpecific[wordIndex-1]">
                     #{{ splitSpecific[wordIndex-1] }}
@@ -153,7 +153,8 @@
                             console.log(this.messageGeneral)
                             resolve("Great!")
                         })
-                    }).then(val => {
+                    })
+                    loadPromise.then(val => {
                         console.log(this.messageSpecific)
                         this.splice(event, 1)
                         this.splice(event, 2)
