--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </button>
         <div class="hashtagInput mb-3">
             <label for="genHashtags" class="form-label">General Hashtags</label>
-            <input id="genHashtags" type="text" v-model="messageGeneral" v-on:keyup="splice($event, 1)" placeholder="General-use hashtags" class="form-control">
+            <input id="genHashtags" type="text" v-model="messageGeneral" v-on:keyup="splice(1)" placeholder="General-use hashtags" class="form-control">
             <div class='hashtagDisplay'>
                 <a v-for="wordIndex in splitGeneral.length" class="hashtags" :style="{ 'background-color' : colorsGeneral[(wordIndex-1)%3]}" :href="'https://www.instagram.com/explore/tags/' + splitGeneral[wordIndex-1]">
                     #{{ splitGeneral[wordIndex-1] }}
@@ -36,7 +36,7 @@
         </div>
         <div class="hashtagInput mb-3">
             <label for="specHashtags" class="form-label">Specific Hashtags</label>
-            <input id="specHashtags" type="text" v-model="messageSpecific" v-on:keyup="splice($event, 2)" placeholder="Post-specific hashtags" class="form-control">
+            <input id="specHashtags" type="text" v-model="messageSpecific" v-on:keyup="splice(2)" placeholder="Post-specific hashtags" class="form-control">
             <div class='hashtagDisplay'>
                 <a v-for="wordIndex in splitSpecific.length" class="hashtags" :style="{ 'background-color' : colorsSpecific[(wordIndex-1)%3]}" :href="'https://www.instagram.com/explore/tags/' + splitSpecific[wordIndex-1]">
                     #{{ splitSpecific[wordIndex-1] }}
@@ -92,7 +92,7 @@
                 colorsSpecific: (["#0a369d80", "#4472ca80", "#5e7ce280"]).sort(() => Math.random() - 0.5),
             },
             methods: {
-                splice: function(event, num){
+                splice: function(num){
                     if (num == 1){
                         console.log("hit1")
                         console.log(this.messageGeneral)
@@ -166,7 +166,8 @@
             },
             watch: {
                 messageGeneral: function(val){
-                    this.splice(val, 1)
+                    console.log("Watch"+messageGeneral)
+                    this.splice(1)
                 }
             }
         })
