--- a/index.html
+++ b/index.html
@@ -151,13 +151,13 @@
                             this.messageGeneral = snapshot.val().gen
                             this.messageSpecific = snapshot.val().spec
                             console.log(this.messageGeneral)
-                            this.$refs.specHashInput.keyup()
+                            // this.$refs.specHashInput.keyup()
+                            resolve("Great!")
                         })
-                        resolve("Great!")
-                        console.log("new")
+                        // console.log("new")
                     })
                     loadPromise.then(val => {
-                        console.log("new?>")
+                        console.log("new?>>")
                     //     this.splice(event, 1)
                     //     this.splice(event, 2)
                         let keyupEvent = new Event("keyup")
