--- a/index.html
+++ b/index.html
@@ -148,21 +148,24 @@
                         firebase.database().ref(userId).on('value', function (snapshot) {
                             document.getElementById("genHashtags").value = snapshot.val().gen
                             document.getElementById("specHashtags").value = snapshot.val().spec
-                            this.messageGeneral = snapshot.val().gen
-                            this.messageSpecific = snapshot.val().spec
-                            console.log(this.messageGeneral)
                             // this.$refs.specHashInput.keyup()
                             resolve("Great!")
                         })
                         // console.log("new")
                     })
                     loadPromise.then(val => {
-                        console.log("new?>>")
+                        console.log("then1")
+                        this.messageGeneral = document.getElementById("genHashtags")
+                        this.messageSpecific = document.getElementById("specHashtags")
+                        console.log(this.messageGeneral)
+                    }).then(val => {
+                        console.log("then2")
                     //     this.splice(event, 1)
                     //     this.splice(event, 2)
                         let keyupEvent = new Event("keyup")
                         document.getElementById("genHashtags").dispatchEvent(keyupEvent)
                         document.getElementById("specHashtags").dispatchEvent(keyupEvent)
+
                     })
                     // inputEle = document.createElement('input')
                     // inputEle.setAttribute('value', "HELLO")
