--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </button>
         <div class="hashtagInput mb-3">
             <label for="genHashtags" class="form-label">General Hashtags</label>
-            <input id="genHashtags" type="text" v-model="messageGeneral" v-on:keyup="splice(1)" placeholder="General-use hashtags" class="form-control" ref="genHashInput">
+            <input id="genHashtags" type="text" v-model.trim="messageGeneral" v-on:keyup="splice(1)" placeholder="General-use hashtags" class="form-control" ref="genHashInput">
             <div class='hashtagDisplay'>
                 <a v-for="wordIndex in splitGeneral.length" class="hashtags" :style="{ 'background-color' : colorsGeneral[(wordIndex-1)%3]}" :href="'https://www.instagram.com/explore/tags/' + splitGeneral[wordIndex-1]">
                     #{{ splitGeneral[wordIndex-1] }}
@@ -36,7 +36,7 @@
         </div>
         <div class="hashtagInput mb-3">
             <label for="specHashtags" class="form-label">Specific Hashtags</label>
-            <input id="specHashtags" type="text" v-model="messageSpecific" v-on:keyup="splice(2)" placeholder="Post-specific hashtags" class="form-control" ref="specHashInput">
+            <input id="specHashtags" type="text" v-model.trim="messageSpecific" v-on:keyup="splice(2)" placeholder="Post-specific hashtags" class="form-control" ref="specHashInput">
             <div class='hashtagDisplay'>
                 <a v-for="wordIndex in splitSpecific.length" class="hashtags" :style="{ 'background-color' : colorsSpecific[(wordIndex-1)%3]}" :href="'https://www.instagram.com/explore/tags/' + splitSpecific[wordIndex-1]">
                     #{{ splitSpecific[wordIndex-1] }}
@@ -143,37 +143,25 @@
                     inputEle.parentNode.removeChild(inputEle)
                 },
                 loadWords: function(event){
-                    // console.log("HELLO")
                     const loadPromise = new Promise((resolve, reject) => {
                         firebase.database().ref(userId).on('value', function (snapshot) {
                             document.getElementById("genHashtags").value = snapshot.val().gen
                             document.getElementById("specHashtags").value = snapshot.val().spec
-                            // this.$refs.specHashInput.keyup()
                             resolve("Great!")
                         })
-                        // console.log("new")
                     })
                     loadPromise.then(val => {
-                        console.log("then1")
+                        // console.log("then1")
                         this.messageGeneral = document.getElementById("genHashtags").value
                         this.messageSpecific = document.getElementById("specHashtags").value
                         console.log(this.messageGeneral)
                     }).then(val => {
-                        console.log("then2")
+                        // console.log("then2")
                         let keyupEvent = new Event("keyup")
                         document.getElementById("genHashtags").dispatchEvent(keyupEvent)
                         document.getElementById("specHashtags").dispatchEvent(keyupEvent)
 
                     })
-                    // inputEle = document.createElement('input')
-                    // inputEle.setAttribute('value', "HELLO")
-                    // document.body.append(inputEle)
-                }
-            },
-            watch: {
-                messageGeneral: function(val){
-                    console.log("Watch"+messageGeneral)
-                    this.splice(1)
                 }
             }
         })
