--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
 
         <button v-if="splitGeneral.length >0 || splitSpecific.length > 0" v-on:click="scramble">SCRAMBLE</button>
-        <div class='hashtagDisplay whiteText'>
+        <div class='hashtagDisplay'>
             <!-- <div v-if="show" v-for="word in scrambledSplit" class="hashtags">#{{ word }}</div> -->
             <a v-for="wordIndex in scrambledSplit.length" class="hashtags"
                 :style="{ 'background-color' : colorsScrambled[(wordIndex-1)%3]}"
@@ -93,8 +93,8 @@
                 scrambledSplit: [],
                 scrambledMessage: "",
                 show: false,
-                colorsGeneral: (["#96E8BC80", "#B6F9C980", "#C9FFE280"]).sort(() => Math.random() - 0.5),
-                colorsSpecific: (["#0a369d80", "#4472ca80", "#5e7ce280"]).sort(() => Math.random() - 0.5),
+                colorsGeneral: (["#96E8BC", "#23967F", "#7DAF9C"]).sort(() => Math.random() - 0.5),
+                colorsSpecific: (["#0a369d", "#4472ca", "#5e7ce2"]).sort(() => Math.random() - 0.5),
                 colorsScrambled: (["#A62639", "#DB324D", "#E43F6F"]).sort(() => Math.random() - 0.5),
             },
             methods: {
