--- a/index_copy.html
+++ b/index_copy.html
@@ -178,38 +178,19 @@
         var signedIn = false;
         var userId;
 
-        var provider = new firebase.auth.GoogleAuthProvider();
-
         function onSignIn(googleUser) {
-            firebase.auth()
-                .signInWithPopup(provider)
-                .then((result) => {
-                    /** @type {firebase.auth.OAuthCredential} */
-                    var credential = result.credential;
-
-                    // This gives you a Google Access Token. You can use it to access the Google API.
-                    var token = credential.accessToken;
-                    // The signed-in user info.
-                    var user = result.user;
-                    // ...
-                }).catch((error) => {
-                    // Handle Errors here.
-                    var errorCode = error.code;
-                    var errorMessage = error.message;
-                    // The email of the user's account used.
-                    var email = error.email;
-                    // The firebase.auth.AuthCredential type that was used.
-                    var credential = error.credential;
-                    // ...
-                });
+            var profile = googleUser.getBasicProfile();
+            userId = profile.getId()
+            // console.log('Name: ' + profile.getName());
+            // console.log('Image URL: ' + profile.getImageUrl());
+            // console.log('Email: ' + profile.getEmail()); // This is null if the 'email' scope is not present.
             signInRender()
             signedIn = true;
         }
         function signOut() {
-            firebase.auth().signOut().then(() => {
-                console.log("Signed out")
-            }).catch((error) => {
-                console.log("Sign out error")
+            var auth2 = gapi.auth2.getAuthInstance();
+            auth2.signOut().then(function () {
+                console.log('User signed out.');
             });
             signOutRender()
             signedIn = false;
