--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body class="container">
     <h1>igScrambler</h1>
 
-    <div class="g-signin2" data-onsuccess="onSignIn"></div>
+    <div class="g-signin2" onclick="onSignIn()"></div>
     <button id="signOutButton" style="display: none;" onclick="signOut()">
         Sign out
     </button>
