--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
                     // The signed-in user info.
                     var user = result.user;
                     // ...
+                    console.log("USER", user)
                 }).catch((error) => {
                     // Handle Errors here.
                     var errorCode = error.code;
