--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
                     var token = credential.accessToken;
                     // The signed-in user info.
                     var user = result.user;
-                    // ...
-                    console.log("USER", user)
+                    userId = user.uid
+                    console.log("USER ID", userId)
                 }).catch((error) => {
                     // Handle Errors here.
                     var errorCode = error.code;
