--- a/index.html
+++ b/index.html
@@ -224,6 +224,10 @@
                     // The firebase.auth.AuthCredential type that was used.
                     var credential = error.credential;
                     // ...
+                    console.log(errorCode)
+                    console.log(errorMessage)
+                    console.log(email)
+                    console.log(credential)
                 });
             signInRender()
             signedIn = true;
