--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
     <meta name="google-signin-client_id" content="1072523115860-pi871022ohoipedb2i6ugbgml7ak82r4.apps.googleusercontent.com">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-database.js"></script>
 </head>
 <body class="container">
     <h1>igScrambler</h1>
@@ -73,6 +72,7 @@
         import { createApp } from 'vue'
         import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.6.7/firebase-app.js'
         import { getAuth, signInWithRedirect, GoogleAuthProvider, getRedirectResult } from 'https://www.gstatic.com/firebasejs/9.6.7/firebase-auth.js'
+        import { getDatabase, ref, set, onValue } from "https://www.gstatic.com/firebasejs/9.6.7/firebase-database.js"
 
         // Your web app's Firebase configuration
         const firebaseConfig = {
@@ -161,7 +161,10 @@
                 loadWords: function(event){
                     console.log("Loading")
                     const loadPromise = new Promise((resolve, reject) => {
-                        firebase.database().ref(userId).on('value', function (snapshot) {
+                        const db = getDatabase();
+
+                        const userData = ref(db, userId + '/value')
+                        onValue(userData, (snapshot) => {
                             document.getElementById("genHashtags").value = snapshot.val().gen
                             document.getElementById("specHashtags").value = snapshot.val().spec
                             resolve("Great!")
