Popup instead of redirect

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <script type="module">
         import { createApp } from 'vue'
         import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.6.7/firebase-app.js'
-        import { getAuth, signInWithRedirect, GoogleAuthProvider, getRedirectResult } from 'https://www.gstatic.com/firebasejs/9.6.7/firebase-auth.js'
+        import { getAuth, signInWithPopup, GoogleAuthProvider } from 'https://www.gstatic.com/firebasejs/9.6.7/firebase-auth.js'
         import { getDatabase, ref, set, onValue } from "https://www.gstatic.com/firebasejs/9.6.7/firebase-database.js"
 
         // Your web app's Firebase configuration
@@ -192,36 +192,58 @@
         const provider = new GoogleAuthProvider();
         const auth = getAuth();
 
-        getRedirectResult(auth)
-            .then((result) => {
-                // This gives you a Google Access Token. You can use it to access Google APIs.
-                const credential = GoogleAuthProvider.credentialFromResult(result);
-                const token = credential.accessToken;
+        // getRedirectResult(auth)
+        //     .then((result) => {
+        //         // This gives you a Google Access Token. You can use it to access Google APIs.
+        //         const credential = GoogleAuthProvider.credentialFromResult(result);
+        //         const token = credential.accessToken;
 
-                // The signed-in user info.
-                const user = result.user;
-                userId = user.uid;
-                console.log("USER ID", userId)
-            }).catch((error) => {
-                // Handle Errors here.
-                const errorCode = error.code;
-                const errorMessage = error.message;
-                // The email of the user's account used.
-                const email = error.email;
-                // The AuthCredential type that was used.
-                const credential = GoogleAuthProvider.credentialFromError(error);
+        //         // The signed-in user info.
+        //         const user = result.user;
+        //         userId = user.uid;
+        //         console.log("USER ID", userId)
+        //     }).catch((error) => {
+        //         // Handle Errors here.
+        //         const errorCode = error.code;
+        //         const errorMessage = error.message;
+        //         // The email of the user's account used.
+        //         const email = error.email;
+        //         // The AuthCredential type that was used.
+        //         const credential = GoogleAuthProvider.credentialFromError(error);
                 
-                console.log(errorCode)
-                console.log(errorMessage)
-                console.log(email)
-                console.log(credential)
-            });
+        //         console.log(errorCode)
+        //         console.log(errorMessage)
+        //         console.log(email)
+        //         console.log(credential)
+        //     });
 
         document.getElementById("signOutButton").addEventListener('click', signOut)
 
         function onSignIn() {
             console.log("SIGNING IN...")
-            signInWithRedirect(auth, provider);
+            signInWithPopup(auth, provider)
+                .then((result) => {
+                    // This gives you a Google Access Token. You can use it to access the Google API.
+                    const credential = GoogleAuthProvider.credentialFromResult(result);
+                    const token = credential.accessToken;
+                    // The signed-in user info.
+                    const user = result.user;
+                    userId = user.uid;
+                    console.log("USER ID", userId)
+                }).catch((error) => {
+                    // Handle Errors here.
+                    const errorCode = error.code;
+                    const errorMessage = error.message;
+                    // The email of the user's account used.
+                    const email = error.email;
+                    // The AuthCredential type that was used.
+                    const credential = GoogleAuthProvider.credentialFromError(error);
+                    
+                    console.log(errorCode)
+                    console.log(errorMessage)
+                    console.log(email)
+                    console.log(credential)
+                });
             console.log("COMPLETE SIGN IN PROCESS")
             signInRender()
             signedIn = true;
