--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <script type="module">
         import { createApp } from 'vue'
         import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.6.7/firebase-app.js'
-        import { getAuth, signInWithPopup, GoogleAuthProvider } from 'https://www.gstatic.com/firebasejs/9.6.7/firebase-auth.js'
+        import { getAuth, signInWithPopup, GoogleAuthProvider, signOut } from 'https://www.gstatic.com/firebasejs/9.6.7/firebase-auth.js'
         import { getDatabase, ref, set, onValue } from "https://www.gstatic.com/firebasejs/9.6.7/firebase-database.js"
 
         // Your web app's Firebase configuration
@@ -249,7 +249,7 @@
             signedIn = true;
         }
         function signOut() {
-            firebase.auth().signOut().then(() => {
+            signOut(auth).then(() => {
                 console.log("Signed out")
             }).catch((error) => {
                 console.log("Signed out ERROR")
