--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <h1>igScrambler</h1>
 
     <!-- <div class="g-signin2" data-onsuccess="onSignIn"></div> -->
-    <button id="signInButton" type="button" class="btn btn-light">
+    <button id="signInButton" style="display: none;" type="button" class="btn btn-light">
         Sign in
     </button>
     <button id="signOutButton" style="display: none;" type="button" class="btn btn-light">
